# post-quantum-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY_AUDIT.md  pyproject.toml  run.sh
.github/workflows/: ci.yml  relay-ci.yml
deploy/relay/: RELAY-SPEC.md
deploy/relay/worker/: package-lock.json  package.json  wrangler.toml
deploy/relay/worker/src/: index.ts  rate-limiter.ts
deploy/relay/worker/test/: relay.test.ts
docs/: v3-envelope-spec.md
docs/superpowers/plans/: 2026-03-29-hybrid-key-exchange.md  2026-03-30-secret-handle-keyring.md
docs/superpowers/specs/: 2026-03-29-hybrid-key-exchange-design.md  2026-03-30-secret-handle-keyring-design.md
examples/: anonymous_envelope.py  authenticated_envelope.py  failure_modes.py
pqc_mcp_server/: __init__.py  __main__.py  filesystem.py  handlers_hybrid.py  handlers_pqc.py  hybrid.py  key_store.py  replay_cache.py  security_policy.py  tools.py
scripts/: install-liboqs.sh
tests/: conftest.py  test_algorithm_info.py  test_filesystem.py  test_handle_keyring.py  test_handle_policy_negative_paths.py  test_hybrid.py  test_hybrid_auth.py  test_input_validation.py  test_kem.py  test_mcp_integration.py  test_protocol_fuzz.py  test_replay_cache_multiprocess_probe.py  test_security_regressions_extra.py  test_security_regressions_hard_multiagent.py  test_server.py  test_signatures.py  test_state_corruption_and_recovery.py  test_utilities.py  test_v3_mode_separation.py  test_wycheproof.py
